--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
  <head>
-  <title>Название страницы</title>
+  <title>Моя страница</title>
+  <link rel="stylesheet" href="style.css">
  </head>
  <body>
-  <h1>Заголовок статьи</h1>
+  <h1>Моя страница</h1>
   <p>
-   Абзац статьи.</p>
+   Ну вот тут вот какбы так вроде бы ну скажем возможно может быть интересный текст вот так как то вроде бы.</p>
  </body>
 </html>
