--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
  </head>
  <body>
-  <h1>Моя страница</h1>
+  <h1>Заголовок</h1>
   <p>
    Ну вот тут вот какбы так вроде бы ну скажем возможно может быть интересный текст вот так как то вроде бы.</p>
  </body>
