Теперь страничка имеет блок с текстом с пафосной подсветкой)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
- <head>
-  <title>Моя страница</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body>
-  <h1>Заголовок</h1>
-  <p>
-   Ну вот тут вот какбы так вроде бы ну скажем возможно может быть интересный текст вот так как то вроде бы.</p>
- </body>
+	<head>
+		<title>Моя страница</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<h1>Заголовок</h1>
+		<div>
+			<p>Ну вот тут вот какбы так вроде бы ну скажем возможно может быть интересный текст вот так как то вроде бы.</p>
+		</div>
+	</body>
 </html>
