Сделал нормальное расположение элементов, добавил кнопочки и картинку.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Заголовок</h1>
-		<div>
-			<p>Ну вот тут вот какбы так вроде бы ну скажем возможно может быть интересный текст вот так как то вроде бы.</p>
+		<div class=main_block>
+			<h1>Заголовок</h1>
+			<div class=grid_container>
+				<div class=portrait>
+					<img src="photo.png" width=100%>
+				</div>
+				<a class=button>
+					<p class="button_text">Пустая кнопочка</p>
+				</a>
+				<a class=button href="https://www.youtube.com/watch?v=H01BwSD9eyQ">
+					<p class="button_text">Халявные ключи Steam</p>
+				</a>
+				<div class=main_text>
+					<p>Основной текст.</p>
+				</div>
+			</div>
+			<p>Bottom text.</p>
 		</div>
 	</body>
 </html>
