Почти готово! Добавил страницы из 2го задания.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
 	</head>
 	<body>
 		<div class=main_block>
-			<h1>Заголовок</h1>
+			<h1>Моя страница</h1>
 			<div class=grid_container>
-				<div class=portrait>
-					<img src="photo.png" width=100%>
+				<div class=left_part>
+					<div class=portrait>
+						<img src="index_img.png" width=100%>
+					</div>
+					<a class=button href="index.html">
+						<p>О себе</p>
+					</a>
+					<a class=button href="gallery.html">
+						<p>Галерея</p>
+					</a>
+					<a class=button href="drinks.html">
+						<p>Обзор напитков</p>
+					</a>
 				</div>
-				<a class=button>
-					<p class="button_text">Пустая кнопочка</p>
-				</a>
-				<a class=button href="https://www.youtube.com/watch?v=H01BwSD9eyQ">
-					<p class="button_text">Халявные ключи Steam</p>
-				</a>
-				<div class=main_text>
-					<p>Основной текст.</p>
+				<div class=main_part>
+					<div class=main_text>
+						<h1>О себе</h1>
+						<p>Текст.</p>
+					</div>
 				</div>
 			</div>
-			<p>Bottom text.</p>
+			<p>Сделал страницу: Иванов Александр Васильевич (Б8120-01.03.02систпро)</p>
 		</div>
 	</body>
 </html>
