Ну вроде все, сменил цвет подсветки, уменьшил её яркость и заполнил главную.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 				<div class=main_part>
 					<div class=main_text>
 						<h1>О себе</h1>
-						<p>Текст.</p>
+						<p>Я Иванов Александр Васильевич, учусь в ДВФУ по направлению подготовки "Прикладная математика и информатика".</p>
+						<p>Не могу сказать что я "разбираюсь" в IT или в программировании, я пока только учусь, но что-то немного знаю, что-то немного умею.</p>
+						<p>Мои текущие достижения:</p>
+						<ul>
+							<li>Несколько раз занимал призовые места в олимпиадах школьников (ВСОШ, ВКОШП).</li>
+							<li>Участвовал в ICPC Northern Eurasia Finals, где моя команда заняла 86-е место.</li>
+							<li>Начал делать и успешно забросил 3 мелкие игрушки в Game Maker: Studio и Unity.</li>
+						</ul>
+						<p>Надеюсь усовершенствовать свои навыки и найти свое место в IT сфере.</p>
 					</div>
 				</div>
 			</div>
