--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<p>Не могу сказать что я "разбираюсь" в IT или в программировании, я пока только учусь, но что-то немного знаю, что-то немного умею.</p>
 						<p>Мои текущие достижения:</p>
 						<ul>
-							<li>Несколько раз занимал призовые места в олимпиадах школьников (ВСОШ, ВКОШП).</li>
+							<li>Несколько раз занимал призовые места в муниципальных и региональных этапах олимпиад школьников (ВСОШ, ВКОШП).</li>
 							<li>Участвовал в ICPC Northern Eurasia Finals, где моя команда заняла 86-е место.</li>
 							<li>Начал делать и успешно забросил 3 мелкие игрушки в Game Maker: Studio и Unity.</li>
 						</ul>
