Сменил дизайн на менее контрастный.

--- a/drinks.html
+++ b/drinks.html
@@ -18,12 +18,12 @@
 						<p>Галерея</p>
 					</a>
 					<a class=button href="drinks.html">
-						<p>Обзор напитков</p>
+						<p>Рекомендация напитков</p>
 					</a>
 				</div>
 				<div class=right_part>
 					<div class=main_text>
-						<h1>Обзор напитков</h1>
+						<h1>Рекомендация напитков</h1>
 						<table border="1">
 							<tr>
 								<th>Название напитка</th>
