--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<p>Галерея</p>
 					</a>
 					<a class=button href="drinks.html">
-						<p>Обзор напитков</p>
+						<p>Рекомендация напитков</p>
 					</a>
 				</div>
 				<div class=main_part>
