Сделал flex вместо grid.

--- a/drinks.html
+++ b/drinks.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<div class=main_block>
-			<h1>Моя страница</h1>
+			<h1 class=no_margin>Моя страница</h1>
+			<img src="SE_logo.png" width=218px>
 			<div class=grid_container>
 				<div class=left_part>
 					<div class=portrait>
@@ -21,7 +22,7 @@
 						<p>Рекомендация напитков</p>
 					</a>
 				</div>
-				<div class=right_part>
+				<div class=main_part>
 					<div class=main_text>
 						<h1>Рекомендация напитков</h1>
 						<table border="1">
