--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<div class=main_block>
-			<h1>Моя страница</h1>
+			<h1 class=no_margin>Моя страница</h1>
+			<img src="SE_logo.png" width=218px>
 			<div class=grid_container>
 				<div class=left_part>
 					<div class=portrait>
